--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
+        <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings" >
+        </activity>
+        <activity
+            android:name=".AppSettings"
+            android:label="@string/title_activity_app_settings" >
+        </activity>
     </application>
 
 </manifest>
